--- a/app/templates/dashboard_manager.html
+++ b/app/templates/dashboard_manager.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
- <p>
-    <h1>Manager Dashboard</h1>
-    <h2> Welcome, {{ current_user.first_name }}!</h2>
-</p>
- <h2>Quick Links</h2>
+<h2>Quick Links</h2>
 <p>
     <a href="{{ url_for('manage_users') }}" class="staff-dash-btn">Training</a>
     <br>
@@ -15,9 +10,8 @@
     <a href="{{ url_for('manage_users') }}" class="staff-dash-btn">Knowledge Base</a>
 </p>
 
-<!-- Back Button -->
-<p>
-    <a href="{{ url_for('manage_users') }}" class="btn">Back</a>
-</p>
+{% endblock %}
 
+{% block specific_heading %}
+  <h3 class="welcome-text">Welcome, {{ current_user.first_name|title }}</h3>
 {% endblock %}
